[package]
name = "tokio-serde-codecs"
version = "0.1.0"
edition = "2018"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Carl Lerche <me@carllerche.com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vorot93/tokio-serde-codecs"
homepage = "https://github.com/vorot93/tokio-serde-codecs"
documentation = "https://docs.rs/tokio-serde-codecs/0.1.0"
description = """
Serde-based codecs to create Tokio transport for
serialization and deserialization of frame values.
"""

[dependencies]
bytes = "0.4"
futures-preview = "0.3.0-alpha"
pin-project = "0.4"
serde = "1.0"
serde_json = "1.0"
tokio-serde = "0.4.0"

[dev-dependencies]
tokio = "0.2.0-alpha"
